[workspace]
members = [
  "tonic",
  "tonic-build",
  "tonic-health",
  "tonic-types",
  "tonic-reflection",
  "tonic-web", # Non-published crates
  "examples",
  "codegen",
  "interop", # Tests
  "tests/disable_comments",
  "tests/included_service",
  "tests/same_name",
  "tests/service_named_service",
  "tests/wellknown",
  "tests/wellknown-compiled",
  "tests/extern_path/uuid",
  "tests/ambiguous_methods",
  "tests/extern_path/my_application",
  "tests/integration_tests",
  "tests/stream_conflict",
  "tests/root-crate-path",
  "tests/compression",
  "tonic-web/tests/integration",
  "tests/service_named_result",
  "tests/use_arc_self",
  "tests/default_stubs",
]
resolver = "2"

[patch.crates-io]
bytes = { git = "https://github.com/tokio-rs/bytes", rev = "cb7f844" }
prost = { git = "https://github.com/DataDog/prost", branch = "clementtsang/byte_optimizations" }
prost-build = { git = "https://github.com/DataDog/prost", branch = "clementtsang/byte_optimizations" }
prost-types = { git = "https://github.com/DataDog/prost", branch = "clementtsang/byte_optimizations" }
